recursion.lessons.recursion.koch.Koch.scala.error
Koch:22: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		snowSide(levels-1)
                        ^Koch:25: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		snowSide(levels-1)
                        ^Koch:28: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		snowSide(levels-1)
                        ^Koch:30: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
		snowSide(levels-1)
                        ^