recursion.lessons.recursion.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
	
	var tiers = length/3

	if (levels == 0) {
		return
	}

	else {
		avance(tiers)
		snowSide(levels-1)
		gauche(60)
		avance(tiers)
		snowSide(levels-1)
		droite(60)
		avance(tiers)
		snowSide(levels-1)
		gauche(60)
		snowSide(levels-1)
		avance(tiers)
	}
}
